changes to swagger.js
